# qifac

./: .gitignore  .gitmodules  Makefile  README.md  Splinter-CoordinationLayer-CoordinationSystemRefinement.i.dfy-Impl__CoordinationSystemRefinement.__default.PutStepRefines.smt2  aggregate.txt  consensus.smt2  metadata.toml  mypy.ini  pyproject.toml  requirements.txt  results.xlsx  test.smt2  theories.py
case-studies/PagedBetree/: PagedBetree.broken-ratio.txt
case-studies/PagedBetree/diff/: instances.txt  per_category.csv  per_file.csv  per_qid.csv
case-studies/PagedBetree/manual/: instances.txt  per_category.csv  per_file.csv  per_qid.csv
case-studies/PagedBetree/unknown/: instances.txt  per_category.csv  per_file.csv  per_qid.csv
case-studies/PagedBetree/unsat/: per_file.csv  (+3 more)
case-studies/SequenceSets/: SequenceSets-core.txt
examples/: inner.smt2  inner2.smt2  instances.txt  proof-for-inner.smt2  proof.smt2  rdf.smt2  receipt_drop_first.smt2  simple-instantiation.smt2  skolem.smt2  skolemer.smt2  test.smt2  two-var-instantiation.smt2  weirder.smt2
examples/PagedBetree-case-study/: PagedBetree-core.smt2
examples/lock-server-exercises/: exercise01.dfy
examples/splinter/: simpler_no_trigger-core.smt2  simpler_no_trigger.smt2  test_no_trigger-clean.smt2  test_no_trigger-compact.smt2  test_no_trigger-ugly.smt2  test_no_trigger.smt2  test_trigger-clean-core.smt2  test_trigger-clean.smt2  test_trigger-core.smt2  test_trigger-direct-core.smt2  test_trigger-quant-core.smt2  test_trigger-requantified-core-requantified.smt2  test_trigger-requantified-core.smt2  test_trigger-requantified-ignores.smt2  test_trigger-requantified.smt2  test_trigger-ugly.smt2  test_trigger.smt2
experimental/: algebraic_data_types_consensus.py
paper/sketches/: algorithm.aux  algorithm.tex  main.aux  main.tex
qifac/: __main__.py  cli.py  cli_types.py  instantiation_set.py  instantiation_tree.py  metadata.py  pysmt_helpers.py  utils.py  z3_utils.py
qifac/aggregate/: __init__.py  cli.py
qifac/analyze/: __init__.py  categorize.py  cli.py  utils.py
qifac/batch/: cli.py
qifac/cegar/: __init__.py  hitter.py
qifac/cli/: __init__.py
qifac/core/: __init__.py  cli.py
qifac/count/: __init__.py  cli.py
qifac/instances/: __init__.py  cli.py  compare.py  instantiate.py
qifac/model/: __init__.py  cli.py
qifac/parsing/: flat.py  instantiation_set.py  instantiation_tree.py
qifac/search/: adt.py  cli.py
qifac/smt/: __init__.py  booleanize.py  cleaner.py  cli.py  sampler.py
qifac/text/: __init__.py  cli.py
qifac/tools/: __init__.py  add_proof.py  booleanize_quantifiers.py  cegar.py  compact.py  compare.py  compare_instances.py  filter_named.py  find_instances.py  find_proof.py  helpers.py  instances.py  instantiate.py  name.py  prettify.py  remove_unwanted.py  requantify.py  restrict.py  skolemize.py  terms.py  uglify.py  unique_qids.py  unsat_core.py
qifac/typeinfo/: __init__.py  cli.py  parser.py  types.py  utils.py
scripts/: analyze.sh  find_proofs.sh
slides/: bdds-for-terms.pptx  end-of-internship.pptx  ideas-Dec22.pptx
src/: add_proof.py  booleanize_quantifiers.py  unsat_core.py
stubs/dd/: autoref.pyi
stubs/z3/: __init__.pyi
tests/: test_bdd.py  test_cegar.py
tests/bdd/: conftest.py  test_assignment.py  test_bdd.py  test_binary.py  test_fixpoint.py  test_instantiations.py  test_model.py  test_range.py  test_system.py  test_universe.py  test_utils.py
(+296 files in other folders)
