[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qifac"
description = "Quantifier Instantiation Finder and Cleaner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
dependencies = [
    "click==8.1.3",
    "toml==0.10.2",
    "pyparsing==3.0.9",
    "pysmt==0.9.5",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "mypy==0.971",
    "types-toml==0.10.2",
    "black==22.6.0",
    "isort==5.10.1",
    "autoflake==1.4",
    "pytest==7.1.2",
]

[project.scripts]
qifac = "qifac.cli:run"

[tool.setuptools.packages.find]
include = ["qifac*"]

[tool.setuptools.dynamic]
version = { attr = "qifac.__version__" }

[tool.mypy]
mypy_path = "stubs"
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.black]
extend-exclude = ".env"

[tool.isort]
profile = "black"
src_paths = ["qifac", "tests"]
skip = [".env"]

